@@ -55,7 +55,8 @@ $language_data = array(
     'COMMENT_SINGLE' => array(1 => '//', 2 => '#'),
     'COMMENT_MULTI' => array('/*' => '*/'),
     'HARDQUOTE' => array("'", "'"),
-    'HARDESCAPE' => array("\'"),
+    'HARDESCAPE' => array("'", "\\"),
+    'HARDCHAR' => "\\",
     'COMMENT_REGEXP' => array(
         //Heredoc and Nowdoc syntax
         3 => '/<<<\s*?(\'?)([a-zA-Z0-9]+?)\1[^\n]*?\\n.*\\n\\2(?![a-zA-Z0-9])/siU',
